# dex_figures

./: README.md  aggregate_map.html  all_maps.html  all_maps_faceted.html  aroc_map.html  draw_level_aroc_map.html  figures.py  normalized_stacked_bar_selected.html  normalized_stacked_bar_selected_payer.html  pyproject.toml  sorted_stacked_bar_selected.html  sorted_stacked_bar_selected_payer.html  sorted_stacked_bar_selected_toc.html  stacked_bar.html  stacked_bar_all.html  stacked_bar_selected.html  stacked_bar_selected_payer.html  states.html
data/: aroc.csv  compiled_final_results.csv  draw_level_aroc.csv  final_estimates.csv
