[tool.poetry]
name = "dex_figures"
version = "0.1.0"
description = ""
authors = ["Eunice Jun <eunice.m.jun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.1.0"
vega-datasets = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
